; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_guess_global_dirs.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_guess_global_dirs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"APP_SANDBOX_CONTAINER_ID\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @git_sysdir_guess_global_dirs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_sysdir_guess_global_dirs(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %7 = call i64 (...) @getuid()
  store i64 %7, i64* %4, align 8
  %8 = call i64 (...) @geteuid()
  store i64 %8, i64* %5, align 8
  %9 = call i8* @getenv(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %19, label %12

12:                                               ; preds = %1
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @git__getenv(i32* %17, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i32 %18, i32* %3, align 4
  br label %23

19:                                               ; preds = %12, %1
  %20 = load i32*, i32** %2, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @get_passwd_home(i32* %20, i64 %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %16
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @GIT_ENOTFOUND, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %23
  %28 = call i32 (...) @git_error_clear()
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %27, %23
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @getuid(...) #1

declare dso_local i64 @geteuid(...) #1

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @git__getenv(i32*, i8*) #1

declare dso_local i32 @get_passwd_home(i32*, i64) #1

declare dso_local i32 @git_error_clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
